# Z80

./: CMakeLists.txt  README.md  main.c  z80.c  z80.h
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
include/z80/: z80.h
src/: main.c  z80.c  z80.h
tests/: CMakeLists.txt  main.c
tests/fuse/: .lua-format  CMakeLists.txt  fuse-tests.h  generate.lua  main.c
tests/zex/: CMakeLists.txt  main.c
